# Advanced-Cpp-cource-HW2

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: actions.yml
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.h  word_search_interface.h
lib/utils/src/: utils.c
lib/word_search/: CMakeLists.txt
lib/word_search/src/: word_search.c
lib/word_search_procs/: CMakeLists.txt
lib/word_search_procs/src/: word_search_procs.c
tests/: stress_test.cpp  test.cpp
